--- a/rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics-types/Cargo.toml
+++ b/rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics-types/Cargo.toml
@@ -22,3 +22,4 @@ serde_json = { workspace = true }
 dfn_core = { workspace = true }
 ic-management-canister-types = { workspace = true }
 ic-stable-structures = { workspace = true }
+ic-protobuf = { workspace = true }
