--- a/.bazelrc
+++ b/.bazelrc
@@ -35,6 +35,21 @@ build --@rules_rust//:extra_rustc_flags=-Cdebug-assertions=on
 build --@rules_rust//:extra_rustc_flag=-Dbindings_with_variant_name
 build --strip=never
 
+# build --remote_cache=grpc://localhost:9092
+build --remote_instance_name=default
+build --google_default_credentials=false
+build --remote_upload_local_results=false
+# build --experimental_remote_cache_async
+build --experimental_remote_cache_compression # compress/decompress cache blobs with zstd
+build --remote_timeout=30s # Default is 60s.
+build:ci --remote_timeout=5m # Default is 60s.
+build:ci --remote_upload_local_results=true
+
+build:local --experimental_remote_downloader=
+
+# Does not produce valid JSON. See https://github.com/bazelbuild/bazel/issues/14209
+build --execution_log_json_file=bazel-build-log.json
+
 build --bes_timeout=30s # Default is no timeout.
 build:ci --bes_timeout=180s # Default is no timeout.
 build:ci --bes_upload_mode=fully_async
