--- a/.github/workflows/manage-runner-pre/action.yaml
+++ b/.github/workflows/manage-runner-pre/action.yaml
@@ -41,6 +41,25 @@ runs:
         tool-cache: true
         large-packages: true  # this is slow
 
+    ########################################
+    # Clean local Bazel cache if cache size > 250GB
+    ########################################
+    - name: "🧹 Clean local bazel cache"
+      if: ${{ !startsWith(runner.name, 'dre-runner-custom') }}
+      shell: bash
+      run: |
+        set -eExou pipefail
+        CACHE_DIR="~/.cache"
+        MAX_SIZE=$((250 ))
+        CURRENT_SIZE=$(du -sb "$CACHE_DIR" | cut -f1)
+
+        echo "Current cache size: $(numfmt --to=iec-i --suffix=B "$CURRENT_SIZE")"
+        if [ "$CURRENT_SIZE" -gt "$MAX_SIZE" ]; then
+          echo "=============== cleaning bazel cache ==============="
+
+          rm -rf "$CACHE_DIR"
+        fi
+  
     - uses: bazelbuild/setup-bazelisk@v2
 
     ########################################
