--- a/.bazelrc
+++ b/.bazelrc
@@ -50,6 +50,8 @@ build:local --experimental_remote_downloader=
 # Does not produce valid JSON. See https://github.com/bazelbuild/bazel/issues/14209
 build --execution_log_json_file=bazel-build-log.json
 
+build:dfinity --bes_results_url=https://dash.idx.dfinity.network/invocation/
+build:dfinity --bes_backend=bes.idx.dfinity.network
 build --bes_timeout=30s # Default is no timeout.
 build:ci --bes_timeout=180s # Default is no timeout.
 build:ci --bes_upload_mode=fully_async
