Add recent monthly np rewards

--- a/rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics-types/Cargo.toml
+++ b/rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics-types/Cargo.toml
@@ -23,3 +23,4 @@ dfn_core = { workspace = true }
 ic-management-canister-types = { workspace = true }
 ic-stable-structures = { workspace = true }
 ic-protobuf = { workspace = true }
+ic-nns-governance-api = { workspace = true }
