--- a/rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics/Cargo.toml
+++ b/rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics/Cargo.toml
@@ -31,3 +31,5 @@ ic-registry-keys = { workspace = true }
 rust_decimal = { workspace = true }
 rust_decimal_macros = { workspace = true }
 num-traits = { workspace = true }
+ic-nns-constants = { workspace = true }
+ic-nns-governance-api = { workspace = true }
