--- a/Cargo.toml
+++ b/Cargo.toml
@@ -163,7 +163,9 @@ rust_decimal = "1.36.0"
 rust_decimal_macros = "1.36.0"
 secrecy = { version = "0.8.0" }
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0.128"
+serde_json = { version = "1.0.128", default-features = false, features = [
+    "preserve_order",
+] }
 serde_yaml = "0.9.34"
 shlex = "1.3.0"
 sha2 = "0.10.8"
