--- a/rs/cli/Cargo.toml
+++ b/rs/cli/Cargo.toml
@@ -77,6 +77,7 @@ comfy-table = { workspace = true }
 human_bytes = { workspace = true }
 mockall.workspace = true
 clio = { workspace = true }
+serde_yaml.workspace = true
 
 [dev-dependencies]
 actix-rt = { workspace = true }
