--- a/deny.toml
+++ b/deny.toml
@@ -76,6 +76,7 @@ ignore = [
     { id = "RUSTSEC-2021-0141", reason = "migration away from dotenv pending" },
     { id = "RUSTSEC-2021-0145", reason = "the potential security issue only affects Windows, which we do not target" },
     { id = "RUSTSEC-2024-0370", reason = "alternative not yet available" },
+    { id = "RUSTSEC-2024-0375", reason = "unmaintained should be ignored" },
     #"a-crate-that-is-yanked@0.1.1", # you can also ignore yanked crate versions if you wish
     #{ crate = "a-crate-that-is-yanked@0.1.1", reason = "you can specify why you are ignoring the yanked crate" },
 ]
