--- a/Cargo.toml
+++ b/Cargo.toml
@@ -129,6 +129,8 @@ ic-nervous-system-root = { git = "https://github.com/dfinity/ic.git", rev = "d4e
 ic-nervous-system-clients = { git = "https://github.com/dfinity/ic.git", rev = "d4ee25b0865e89d3eaac13a60f0016d5e3296b31" }
 ic-sns-wasm = { git = "https://github.com/dfinity/ic.git", rev = "d4ee25b0865e89d3eaac13a60f0016d5e3296b31" }
 cycles-minting-canister = { git = "https://github.com/dfinity/ic.git", rev = "d4ee25b0865e89d3eaac13a60f0016d5e3296b31" }
+ic-icrc1-test-utils = { git = "https://github.com/dfinity/ic.git", rev = "d4ee25b0865e89d3eaac13a60f0016d5e3296b31" }
+rosetta-core = { git = "https://github.com/dfinity/ic.git", rev = "d4ee25b0865e89d3eaac13a60f0016d5e3296b31" }
 ic-transport-types = "0.37.1"
 ic-utils = "0.37.0"
 itertools = "0.13.0"
@@ -191,6 +193,7 @@ url = "2.5.2"
 wiremock = "0.6.2"
 human_bytes = "0.4"
 mockall = "0.13.0"
+ed25519-dalek = "2.1.1"
 
 # dre-canisters dependencies
 ic-cdk-timers = { git = "https://github.com/dfinity/cdk-rs.git", rev = "97c4e19c76b7f072ce8507cb7e7a527582111272" }
