--- a/release-index.yaml
+++ b/release-index.yaml
@@ -1,4 +1,8 @@
 releases:
+  - rc_name: rc--2024-10-03_01-30
+    versions:
+      - name: base
+        version: fa2329782561f1b4a5d27052147023e75727e1fa
   - rc_name: rc--2024-09-26_01-31
     versions:
       # Qualification pipeline:
