--- a/release-index.yaml
+++ b/release-index.yaml
@@ -1,4 +1,8 @@
 releases:
+  - rc_name: rc--2024-10-03_01-30
+    versions:
+      - name: base
+        version: d2657773d007e1b4c0b2dd715c628d24c0d7b5fb
   - rc_name: rc--2024-09-26_01-31
     versions:
       # Qualification pipeline:
