--- a/release-index.yaml
+++ b/release-index.yaml
@@ -5,6 +5,8 @@ releases:
         version: d2657773d007e1b4c0b2dd715c628d24c0d7b5fb
       - name: revert-ubuntu-22-04
         version: 1ff0e709f0d0984a4f9ab06456db177c4b6e48a0
+      - name: canister-overhead-hotfix
+        version: f0c923eba09e9c1444501692b0ab4884882bf5bc
   - rc_name: rc--2024-09-26_01-31
     versions:
       # Qualification pipeline:
