--- a/release-index.yaml
+++ b/release-index.yaml
@@ -11,8 +11,9 @@ releases:
         version: f0c923eba09e9c1444501692b0ab4884882bf5bc
       - # This has the same reverts as the prior but rides atop the revert-ubuntu-22-04 release
         # Here is the test battery: https://github.com/dfinity/ic/actions/runs/11243607016
-        name: revert-ubuntu-22-04-canister-overhead-hotfix
-        version: 7c50c0db1e247a25896d77da72c410ff17ef5773
+        # It is just here as a backup:
+        #   name: revert-ubuntu-22-04-canister-overhead-hotfix
+        #   version: 7c50c0db1e247a25896d77da72c410ff17ef5773
   - rc_name: rc--2024-09-26_01-31
     versions:
       # Qualification pipeline:
