--- a/release-index.yaml
+++ b/release-index.yaml
@@ -1,12 +1,10 @@
 releases:
-  - rc_name: rc--2024-10-10-13_47-03
+  - rc_name: rc-2024-10-11-14_35
     versions:
       - name: base
-        version: 6959aa48b140b6cb3f4a76b8d5dd7f918a289da7
-      - name: hyper-hyper
-        version: 5b82b0e27c0af680aa593dd2edca9c0688f85985
-      - name: hyper-overload
-        version: 4ad4ba3680d42177818291f1dd21374ee6b87c63
+        version: 6fb2fd1f0512c81578ea0d1984c48851e6c08b0d
+      - name: overload
+        version: aba60ffbc46acfc8990bf4d5685c1360bd7026b9
   - rc_name: rc--2024-10-03_01-30
       - name: base
         version: d2657773d007e1b4c0b2dd715c628d24c0d7b5fb
