--- a/release-index.yaml
+++ b/release-index.yaml
@@ -6,6 +6,7 @@ releases:
       - name: overload
         version: aba60ffbc46acfc8990bf4d5685c1360bd7026b9
   - rc_name: rc--2024-10-03_01-30
+    versions:
       - name: base
         version: d2657773d007e1b4c0b2dd715c628d24c0d7b5fb
       - name: revert-ubuntu-22-04
