--- a/release-index.yaml
+++ b/release-index.yaml
@@ -1,4 +1,10 @@
 releases:
+  - rc_name: rc--2024-10-11_14-35
+    versions:
+      - name: base
+        version: 6fb2fd1f0512c81578ea0d1984c48851e6c08b0d
+      - name: overload
+        version: aba60ffbc46acfc8990bf4d5685c1360bd7026b9
   - rc_name: rc--2024-10-03_01-30
     versions:
       - name: base
