--- a/rs/dre-canisters/node-provider-rewards-lib/Cargo.toml
+++ b/rs/dre-canisters/node-provider-rewards-lib/Cargo.toml
@@ -5,6 +5,7 @@ authors.workspace = true
 description.workspace = true
 documentation.workspace = true
 edition.workspace = true
+license.workspace = true
 
 [dependencies]
 ic-base-types = { workspace = true }
