--- a/rs/dre-canisters/node-provider-rewards-lib/Cargo.toml
+++ b/rs/dre-canisters/node-provider-rewards-lib/Cargo.toml
@@ -8,6 +8,7 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
+ahash = { workspace = true }
 ic-base-types = { workspace = true }
 ic-protobuf = { workspace = true }
 itertools = { workspace = true }
