--- a/rs/dre-canisters/node-provider-rewards-lib/Cargo.toml
+++ b/rs/dre-canisters/node-provider-rewards-lib/Cargo.toml
@@ -16,6 +16,7 @@ lazy_static = { workspace = true }
 num-traits = { workspace = true }
 rust_decimal = { workspace = true }
 rust_decimal_macros = { workspace = true }
+ic-management-canister-types = { workspace = true }
 
 [lib]
 name = "node_provider_rewards_lib"
