--- a/rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics-types/Cargo.toml
+++ b/rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics-types/Cargo.toml
@@ -24,3 +24,4 @@ ic-management-canister-types = { workspace = true }
 ic-stable-structures = { workspace = true }
 ic-protobuf = { workspace = true }
 ic-nns-governance-api = { workspace = true }
+node-provider-rewards-lib = { workspace = true }
