--- a/rs/cli/Cargo.toml
+++ b/rs/cli/Cargo.toml
@@ -11,9 +11,10 @@ license.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-backon = { workspace = true }
+ahash = { workspace = true }
 anyhow = { workspace = true }
 async-recursion = { workspace = true }
+backon = { workspace = true }
 candid = { workspace = true }
 chrono = { workspace = true }
 clap = { workspace = true }
