--- a/rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics/Cargo.toml
+++ b/rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics/Cargo.toml
@@ -33,4 +33,8 @@ rust_decimal_macros = { workspace = true }
 num-traits = { workspace = true }
 ic-nns-constants = { workspace = true }
 ic-nns-governance-api = { workspace = true }
+node-provider-rewards-lib = { workspace = true }
 chrono = { version = "0.4", default-features = false, features = ["std"] }
+ahash = { version = "0.8.11", default-features = false, features = [
+"compile-time-rng",
+] }
