--- a/rs/ic-management-types/Cargo.toml
+++ b/rs/ic-management-types/Cargo.toml
@@ -8,6 +8,7 @@ documentation.workspace = true
 license.workspace = true
 
 [dependencies]
+ahash = { workspace = true }
 actix-web = { workspace = true }
 chrono = { workspace = true }
 futures = { workspace = true }
