--- a/rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics/Cargo.toml
+++ b/rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics/Cargo.toml
@@ -28,11 +28,17 @@ dfn_core = { workspace = true }
 trustworthy-node-metrics-types = { workspace = true }
 ic-base-types = { workspace = true }
 ic-registry-keys = { workspace = true }
+ic-registry-transport = { workspace = true }
+ic-types = { workspace = true }
 rust_decimal = { workspace = true }
 rust_decimal_macros = { workspace = true }
 num-traits = { workspace = true }
 ic-nns-constants = { workspace = true }
 ic-nns-governance-api = { workspace = true }
+ic-registry-canister-client = { workspace = true }
+lazy_static = { workspace = true }
+prost = { workspace = true }
+ic-interfaces-registry = { workspace = true }
 node-provider-rewards-lib = { workspace = true }
 chrono = { version = "0.4", default-features = false, features = ["std"] }
 ahash = { version = "0.8.11", default-features = false, features = [
