--- a/Cargo.toml
+++ b/Cargo.toml
@@ -112,6 +112,7 @@ ic-nns-constants = { git = "https://github.com/dfinity/ic.git", rev = "132c2452b
 ic-nns-governance = { git = "https://github.com/dfinity/ic.git", rev = "132c2452bea8a9df83c54cd02835d64451f67250" }
 ic-nns-governance-api = { git = "https://github.com/dfinity/ic.git", rev = "132c2452bea8a9df83c54cd02835d64451f67250" }
 ic-protobuf = { git = "https://github.com/dfinity/ic.git", rev = "132c2452bea8a9df83c54cd02835d64451f67250" }
+ic-registry-canister-client = { git = "https://github.com/dfinity/ic.git", rev = "132c2452bea8a9df83c54cd02835d64451f67250" }
 ic-registry-client = { git = "https://github.com/dfinity/ic.git", rev = "132c2452bea8a9df83c54cd02835d64451f67250" }
 ic-registry-client-fake = { git = "https://github.com/dfinity/ic.git", rev = "132c2452bea8a9df83c54cd02835d64451f67250" }
 ic-registry-client-helpers = { git = "https://github.com/dfinity/ic.git", rev = "132c2452bea8a9df83c54cd02835d64451f67250" }
