Use local registry in NPR App (#1081)

--- a/deny.toml
+++ b/deny.toml
@@ -559,6 +559,11 @@ expression = "LicenseRef-IC-1.0"
 license-files = [{ path = "../../../../LICENSE", hash = 0xbd0eed23 }]
 
 [[licenses.clarify]]
+crate = "ic-registry-canister-client"
+expression = "LicenseRef-IC-1.0"
+license-files = [{ path = "../../../LICENSE", hash = 0xbd0eed23 }]
+
+[[licenses.clarify]]
 crate = "ic-registry-client"
 expression = "LicenseRef-IC-1.0"
 license-files = [{ path = "../../../LICENSE", hash = 0xbd0eed23 }]
