Allow DRE vote and other operations to repair the PKCS#11 context that might have gone bad.
When suspending a Linux system, or when accidentally touching a loose NitroKey, the PKCS#11 context used to talk to it gets broken and does not know how to recover.  When we attempt to sign messages, we now detect this situation, drop the prior context, and create a new one.  If this succeeds, all good.  If this fails, we report the original error to the user, and notify them as well that we could not regenerate a valid PKCS#11 context.

--- a/rs/ic-canisters/Cargo.toml
+++ b/rs/ic-canisters/Cargo.toml
@@ -22,10 +22,10 @@ ic-protobuf = { workspace = true }
 ic-registry-transport = { workspace = true }
 ic-utils = { workspace = true }
 log = { workspace = true }
-pkcs11 = { workspace = true }
 prost = { workspace = true }
 reqwest = { workspace = true }
 serde = { workspace = true }
+cryptoki = { workspace = true }
 sha2 = { workspace = true }
 simple_asn1 = { workspace = true }
 thiserror = { workspace = true }
