--- a/deny.toml
+++ b/deny.toml
@@ -787,6 +787,11 @@ crate = "ic-nervous-system-linear-map"
 expression = "LicenseRef-IC-1.0"
 license-files = [{ path = "../../../LICENSE", hash = 0xbd0eed23 }]
 
+[[licenses.clarify]]
+crate = "ic-sns-governance-api"
+expression = "LicenseRef-IC-1.0"
+license-files = [{ path = "../../../../LICENSE", hash = 0xbd0eed23 }]
+
 
 [licenses.private]
 # If true, ignores workspace crates that aren't published, or are only
