Pass the key ID to ic-admin (and therefore to pkcs11-tool) as an integer.

--- a/rs/ic-canisters/Cargo.toml
+++ b/rs/ic-canisters/Cargo.toml
@@ -9,6 +9,7 @@ license.workspace = true
 
 [dependencies]
 anyhow = { workspace = true }
+byteorder = "1.5.0"
 backoff = { workspace = true }
 candid = { workspace = true }
 hex = { workspace = true }
