fix: Remove cargo deny checks
We spent way too much time updating deny.toml to resolve issues that we don't really care about such as:
https://github.com/dfinity/dre/actions/runs/12111445117/job/33763318297?pr=1128

Instead, I'm adding a tiny script that checks precisely the things that we DO care about:
- only a single version of opentelemetry is used
- openssl is not used

As an added bonus, the script runs very quickly and has no dependencies other than a standard python installation.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -80,5 +80,4 @@ repos:
         language: script
         name: Cargo deny checks
         verbose: true
-        entry: bin/cargo-deny-checks.sh
-
+        entry: scripts/cargo-deny-checks.py
