--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,6 +29,7 @@ jobs:
     permissions:
       contents: write
       packages: write
+      pages: write
     steps:
       - uses: actions/checkout@v4
         with:
