--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,6 +21,24 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  build-and-push:
+    runs-on:
+      labels: dre-runner-custom
+    # This image is based on ubuntu:20.04
+    container: ghcr.io/dfinity/dre/actions-runner:3dd4f38f076cad73fdcc68ad37fd29bed4fa3e4d
+    steps:
+      - name: Create GitHub App Token
+        uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: ${{ vars.PR_AUTOMATION_BOT_PUBLIC_APP_ID }}
+          private-key: ${{ secrets.PR_AUTOMATION_BOT_PUBLIC_PRIVATE_KEY }}
+      - uses: actions/checkout@v4
+      - name: "🚀 Build and Push"
+        uses: ./.github/workflows/build
+        with:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+
   bazel:
     runs-on:
       labels: dre-runner-custom
@@ -42,10 +60,6 @@ jobs:
       # Will run test as a local subprocess because for some tests
       # create status files on certain locations (like $HOME)
       ########################################
-      - name: "🚀 Building"
-        uses: ./.github/workflows/build
-        with:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
       - name: "🚀 Testing"
         env:
           STAGING_PRIVATE_KEY_PEM: "${{ secrets.STAGING_PRIVATE_KEY_PEM }}"
