--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -34,10 +34,14 @@ jobs:
           app-id: ${{ vars.PR_AUTOMATION_BOT_PUBLIC_APP_ID }}
           private-key: ${{ secrets.PR_AUTOMATION_BOT_PUBLIC_PRIVATE_KEY }}
       - uses: actions/checkout@v4
+      - name: "☁️ Setup runner"
+        uses: ./.github/workflows/manage-runner-pre
       - name: "🚀 Build and Push"
         uses: ./.github/workflows/build
         with:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+      - name: "🪓 Tear down runner"
+        uses: ./.github/workflows/manage-runner-post
 
   bazel:
     runs-on:
@@ -52,8 +56,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 2
-      - name: "☁️ Setup runner"
-        uses: ./.github/workflows/manage-runner-pre
 
       ########################################
       # Build and test
