--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -56,6 +56,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 2
+      - name: "☁️ Setup runner"
+        uses: ./.github/workflows/manage-runner-pre
 
       ########################################
       # Build and test
