--- a/rs/cli/Cargo.toml
+++ b/rs/cli/Cargo.toml
@@ -91,6 +91,9 @@ url = { workspace = true }
 ic-nns-governance = { workspace = true }
 ic-registry-keys = { workspace = true }
 humantime = { workspace = true }
+reqwest = { workspace = true }
+serde_json = { workspace = true }
+serde.workspace = true
 
 [[bin]]
 name = "dre"
