chore: Add Yusef to neurons-slack-mapping.yaml

--- a/rs/slack-notifications/conf/neurons-slack-mapping.yaml
+++ b/rs/slack-notifications/conf/neurons-slack-mapping.yaml
@@ -64,7 +64,7 @@
 - neuron_id: 62
   slack_id: U8ET9T067    # Paul Liu
 - neuron_id: 63
-  slack_id: U03T4M2EQ6L  # Nikolas Haimerl
+  slack_id: U07TLD4BZAS  # Yusef Habib Fernández
 - neuron_id: 64
   slack_id: U01806HR6MP  # Ian Blenke
 - neuron_id: 65
