--- a/release-index.yaml
+++ b/release-index.yaml
@@ -5,6 +5,10 @@ releases:
       # https://github.com/dfinity/ic/actions/runs/12198247997
       - name: base
         version: d9fe2076f677a08734bed90c67b1c3f4056ed621
+      # Qualification pipelin:
+      # https://github.com/dfinity/ic/actions/runs/12316350606
+      - name: sandboxes7k
+        version: 3e24396441e4c7380928d4e8b4ccff7de77d0e7e
   - rc_name: rc--2024-11-28_03-15
     versions:
       # Qualification pipeline:
