--- a/cordoned_features.yaml
+++ b/cordoned_features.yaml
@@ -35,3 +35,6 @@ features:
   - feature: data_center
     value: ch2
     explanation: "offboarding SG3 DC after 48 months; https://forum.dfinity.org/t/proposal-update-interim-gen-1-node-provider-remuneration-after-48-months/35001/40"
+  - feature: data_center
+    value: an1
+    explanation: "offboarding AN1 DC after 48 months; https://forum.dfinity.org/t/proposal-update-interim-gen-1-node-provider-remuneration-after-48-months/35001/44 and https://forum.dfinity.org/t/proposal-update-interim-gen-1-node-provider-remuneration-after-48-months/35001/46"
