chore: Update cordoned_features.yaml to add TO1

--- a/cordoned_features.yaml
+++ b/cordoned_features.yaml
@@ -38,3 +38,6 @@ features:
   - feature: data_center
     value: an1
     explanation: "offboarding AN1 DC after 48 months; https://forum.dfinity.org/t/proposal-update-interim-gen-1-node-provider-remuneration-after-48-months/35001/44 and https://forum.dfinity.org/t/proposal-update-interim-gen-1-node-provider-remuneration-after-48-months/35001/46"
+  - feature: data_center
+    value: to1
+    explanation: "offboarding TO1 DC after 48 months; https://forum.dfinity.org/t/proposal-update-interim-gen-1-node-provider-remuneration-after-48-months/35001/56 and https://forum.dfinity.org/t/proposal-update-interim-gen-1-node-provider-remuneration-after-48-months/35001/57"
