chore: Update cordoned_features.yaml to remove MR1 and BO1

--- a/cordoned_features.yaml
+++ b/cordoned_features.yaml
@@ -41,3 +41,9 @@ features:
   - feature: data_center
     value: to1
     explanation: "offboarding TO1 DC after 48 months; https://forum.dfinity.org/t/proposal-update-interim-gen-1-node-provider-remuneration-after-48-months/35001/56 and https://forum.dfinity.org/t/proposal-update-interim-gen-1-node-provider-remuneration-after-48-months/35001/57"
+  - feature: data_center
+    value: bo1
+    explanation: "offboarding BO1 DC after 48 months; https://forum.dfinity.org/t/dfinity-gen-1-servers-available-for-sale-through-silent-auction/36710"
+  - feature: data_center
+    value: mr1
+    explanation: "offboarding MR1 DC after 48 months; https://forum.dfinity.org/t/dfinity-gen-1-servers-available-for-sale-through-silent-auction/36710"
